Remove custom paths.